# CardSorter

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Design/: Hardware.fzz  communication.json  datastore.md  layout.md
Embedded/: CMakeLists.txt  README.md  driver.ino
Embedded/FirmataBoard/: FirmataBoard.ino  README.md
Embedded/FirmataBoard/src/: ethernetConfig.h
Embedded/FirmataBoard2/: FirmataBoard2.ino
Embedded/FirmataBoard2/src/: IPlugin.h  NeoPixelPlugin.cpp  PCA9685.cpp  PCA9685.h  PluginManager.cpp  PluginManager.h  VL6180X.cpp  VL6180X.h  ethernetConfig.h
Embedded/NeoPixel/: NeoPixel.ino
Embedded/NeoPixel/src/: NeoPixelPlugin.cpp  NeoPixelPlugin.h
Embedded/Test/: Test.ino
Embedded/Test/src/: FeederSystem.cpp  FeederSystem.h  I2CPayload.cpp  I2CPayload.h  MotorController.cpp  MotorController.h  Response.h  TripWire.cpp  TripWire.h
Embedded/backend/: backend.ino
Embedded/backend/src/: Array.hpp  Color.hpp  Error.hpp  Message.hpp  System.hpp
Embedded/backend/src/Circuit/: Feeder.hpp
Embedded/backend/src/IO/: HeartBeat.cpp  HeartBeat.hpp  IOFactory.cpp  IOManager.cpp  IOManager.hpp  IOOverseer.cpp  IOOverseer.hpp
Embedded/backend/src/IO/Comms/: SerialComm.cpp  SerialComm.hpp  SerialJsonComm.cpp  SerialJsonComm.hpp  i2c.cpp  i2c.hpp
Embedded/backend/src/IO/JSON/: JsonDefinitions.hpp  JsonParser.cpp  JsonParser.hpp
Embedded/backend/src/IO/Sensor/: DeattachedServoMotor.cpp  DeattachedServoMotor.hpp  IMotor.hpp  IPhotoResistor.hpp  IPixelLight.hpp  IServoMotor.hpp  Motor.cpp  Motor.hpp  NMotor.cpp  NMotor.hpp  NPhotoResistor.cpp  NPixelLight.hpp  NServoMotor.cpp  NetworkSensorInterface.cpp  PixelLight.cpp  PixelLight.hpp  Sensor.hpp  SensorDefinitions.cpp  SensorDefinitions.hpp  SensorDefinitionsJson.cpp  SensorDefinitionsJson.hpp  SensorMessage.cpp  SensorMessage.hpp  ServoMotor.cpp  ServoMotor.hpp
Embedded/backend_tests/: FactoryMessage_tests.cpp  SensorMessageExtended_tests.cpp
Embedded/backend_tests/MockObjects/: MockPhotoResistor.cpp
OCRScripts/: .env  MTGCard.py  MTGFactory.py  MTGLibrary.py  Network.py  README.md  Streams.py  camera.py  card_request.py  display_picture.py  image_correction.py  main.py  mtg_parser.py  scryfall_json_shrinker.py  test.py  wordclassifier.py
Operation/: Cargo.toml  README.md  system.json
Operation/res/: System.json
Operation/src/: arduino_board.rs  factory.rs  firmata_comm.rs  job_queue.rs  loader.rs  main.rs  network.rs  overseer.rs  sensor.rs  serial.rs  subscriber.rs
Operation/src/backbone/: message.rs  mod.rs  overseer.rs
Operation/src/board/: arduino_board.rs  mod.rs  network.rs  serial_board.rs
Operation/src/circuit/: capture.rs  circuit_constructor.rs  circuit_controller.rs  circuitwatcher.rs  distributor.rs  factory.rs  feeder.rs  knocker.rs  mod.rs
Operation/src/io/: mockscanner.rs  mod.rs  neatscanner.rs  scanner.rs
Operation/src/sensor/: led_strip.rs  mod.rs  motor.rs  motor_controller.rs  photo_resistor.rs  servo.rs
backend/: Color.cpp  Message.cpp  Message.hpp  backend.ino  i2cComms.cpp  i2cComms.hpp
backend/IO/: IOFactory.cpp  IOManager.cpp  IOManager.hpp  IOOverseer.cpp
backend/IO/Comms/: IComm.hpp  i2c.cpp  i2c.hpp
backend/IO/Sensor/: IPhotoResistor.hpp  IServoMotor.hpp  NPhotoResistor.cpp  NPixelLight.cpp  NServoMotor.cpp  PhotoResistor.cpp  PixelLight.cpp  PixelLight.hpp  Sensor.hpp  SensorDefinitions.cpp  SensorDefinitions.hpp  SensorMessage.cpp  SensorMessage.hpp  ServoMotor.cpp
backend/src/: BoardDefinitions.hpp  Message.cpp  Message.hpp
backend/src/Circuit/: ICircuit.hpp
backend/src/IO/: IOFactory.cpp  IOFactory.hpp  IOManager.cpp  IOManager.hpp  IOOverseer.cpp  IOOverseer.hpp
backend/src/IO/Comms/: i2c.cpp  i2c.hpp  i2cMessageBus.cpp  i2cMessageBus.hpp
backend/src/IO/Sensor/: DeattachedServoMotor.cpp  DeattachedServoMotor.hpp  NPhotoResistor.hpp  NPixelLight.cpp  NPixelLight.hpp  NServoMotor.cpp  NServoMotor.hpp  NetworkSensorInterface.cpp  NetworkSensorInterface.hpp  PhotoResistor.hpp  Sensor.hpp  SensorDefinitions.cpp  SensorDefinitions.hpp  SensorMessage.hpp  ServoMotor.cpp  ServoMotor.hpp
backend_tests/: CMakeLists.txt  FactoryMessage_tests.cpp  MessageProtocol_tests.cpp  SensorMessaging_tests.cpp
backend_tests/MockObjects/: MockComm.cpp  MockComm.hpp  MockPhotoResistor.hpp
design/: Hardware.fzz  layout.md
operation/src/: circuit.rs  sensor.rs
