[package]
name = "card_sorter"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
color-eyre = "0.6"
firmata = {git = "https://github.com/MajorArkwolf/firmata-rust.git"}
tokio = { version = "1.15", features = ["full"] }
tokio-serial = "5.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
getset = "0.1"
async-channel = "1.6"
console-subscriber = {version = "0.1", features=["parking_lot"]}
enum-as-inner = "0.3"
tokio-util = "0.6"
futures = "0.3"
bytes = "1.1"
serde-pickle = "1"
